<resources>
    <string name="app_name">CS4518-FinalProject</string>
    <string name="action_settings">Settings</string>

    <string name="google_maps_key">AIzaSyDfsCirleMY2uyOT37KihPPvd_Ay5PXPvU</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="date_picker_title">\"Meeting Time\"</string>
    <string name="location_nick_name">Location (Nick Name)</string>
    <string name="event_name">Event Name</string>
    <string name="select_location">Select Location</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="dot">• </string>
    <string name="skip">SKIP</string>
    <string name="done">DONE</string>
    <string name="location_tutorial_title">Location Based Reminders</string>
    <string name="location_tutorial_content">You\'ll be alerted when to leave for your meeting based on your current location.</string>
    <string name="sms_tutorial_content">Automatically notify your teammates that you will be late, and when you\'ll get there.</string>
    <string name="sms_tutorial_title">SMS Capability</string>
    <string name="pref_first_time_key">pref_first_time</string>
    <string name="pref_disregard_long_distances_key">pref_disregard_long_distances</string>
    <string name="pref_disregard_long_distances">Disregard long distances</string>
    <string name="pref_disregard_long_distances_summ"></string>
    <string name="pref_sms_blast_key">pref_sms_blast</string>
    <string name="pref_sms_blast">SMS blast</string>
    <string name="pref_sms_blast_summ">Send messages over SMS to your team members if you are running late</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_make_alarm">MakeAlarm</string>
    <string name="title_activity_maps">Map</string>
</resources>
