<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jtstegeman.cs4518_finalproject.EditAlarm">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/horizontalPadding"
        android:paddingRight="@dimen/horizontalPadding"
        android:paddingTop="@dimen/verticalPadding">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/event_name" />

        <EditText
            android:id="@+id/editLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/location_nick_name" />

        <Button
            android:id="@+id/editGPSLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="selectEditLocation"
            android:text="@string/select_location" />

        <Button
            android:id="@+id/editTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="selectEditDate"
            android:text="@string/select_date_and_time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/editCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cancelEditAlarm"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/editConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="confirmEditAlarm"
                android:text="@string/confirm" />


        </LinearLayout>

    </LinearLayout>

</FrameLayout>
